--- a/pre_sass/boilerplate.sass
+++ b/pre_sass/boilerplate.sass
@@ -324,9 +324,10 @@ td
       background-color: rgba(0, 0, 0, 0.6)
 
 .toggle
-  position: absolute
-  top: 0
+  position: fixed
+  overflow: hidden
   right: 0
+  top: 0
   padding: 20px
   z-index: 2
   width: 50px
@@ -337,7 +338,7 @@ td
 
 
 .closebtn
-  position: absolute
+  position: fixed
   top: 0
   right: -340px
   padding: 20px
@@ -346,6 +347,7 @@ td
   height: 60px
   cursor: pointer
   transition: all 0.5s ease
+  overflow: hidden
 
 .sidebar
   position: fixed
@@ -379,31 +381,25 @@ td
         color: #29D4E8
 
 .page-wrapper
-  min-height: 100%
   min-width: 100%
-  position: relative
+  height: 100%
+  width: 100%
+  min-height: 100%
+  position: fixed
   top: 0
-  bottom: 100%
   right: 0
+  margin: 0
   z-index: 1
   color: #333
   -webkit-overflow-scrolling: touch
-  transition: all 0.5s ease
-
-.navtrigger
-  display: block
-  position: relative
-  right: 0
   transition: all 0.5s ease
 
 #sidebartoggler
   &:checked ~
     .toggle
       right: 360px
-      padding-right: 360px
     .closebtn
       right: 20px
-      padding-right: 360px
     .page-wrapper
       right: 360px
     .homebtn
@@ -413,6 +409,19 @@ td
     .navtrigger
       right: 360px
 
+#bgimg
+  top: 0
+  left: 0
+  min-height: 100%
+  min-width: 100%
+  height: 100%
+  width: auto
+  margin: 0
+  padding: 0
+  background-size: cover
+  display: block
+  position: absolute
+  z-index: -1
 
 /*
  * END SIDEBAR CLASSES
