--- a/pre_sass/template.sass
+++ b/pre_sass/template.sass
@@ -28,7 +28,8 @@ img, object, embed, video
 
 /* Mobile Layout: 480px and below.
 
-.MOBILE + ABOVE
+#bgimg
+  background: black url('/images/build/bgmob.jpg') center center no-repeat
 
 .gridContainer
   margin-left: auto
@@ -54,6 +55,9 @@ p
 /* Tablet Layout: 481px to 768px. Inherits styles from: Mobile Layout.
 
 @media only screen and (min-width: 481px)
+
+  #bgimg
+    background: black url('/images/build/bg_tab.jpg') center center no-repeat
 
   .gridContainer
     width: 91.4836%
@@ -86,6 +90,9 @@ p
 /* Desktop Layout: 769px to a max of 1232px.  Inherits styles from: Mobile Layout and Tablet Layout.
 
 @media only screen and (min-width: 769px)
+
+  #bgimg
+    background: black url('/images/build/background.jpg') center center no-repeat
 
   .gridContainer
     width: 89.0217%
